<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".activity_about">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/aboutme"
        android:textSize="@dimen/textSize"
        android:gravity="center"
        android:layout_weight="2"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/mypic"
        android:layout_weight="6"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
       android:layout_weight="2"
        >
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/home"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"

            />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/reminder"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textSize="20sp"

            />
    </RelativeLayout>
</LinearLayout>